# generic-cmake

./: CMakeLists.txt
